--- a/topics_html_source.html
+++ b/topics_html_source.html
@@ -32,7 +32,7 @@
 
 
 
-  <script crossorigin="anonymous" defer="defer" type="application/javascript" src="https://github.githubassets.com/assets/wp-runtime-85b7616b8d48.js"></script>
+  <script crossorigin="anonymous" defer="defer" type="application/javascript" src="https://github.githubassets.com/assets/wp-runtime-8e2c2a015b68.js"></script>
 <script crossorigin="anonymous" defer="defer" type="application/javascript" src="https://github.githubassets.com/assets/vendors-node_modules_manuelpuyol_turbo_dist_turbo_es2017-esm_js-af11d99b3e65.js"></script>
 <script crossorigin="anonymous" defer="defer" type="application/javascript" src="https://github.githubassets.com/assets/vendors-node_modules_stacktrace-parser_dist_stack-trace-parser_esm_js-node_modules_github_bro-d351f6-c1d63d230b29.js"></script>
 <script crossorigin="anonymous" defer="defer" type="application/javascript" src="https://github.githubassets.com/assets/environment-feb058550e66.js"></script>
@@ -56,7 +56,7 @@
 <script crossorigin="anonymous" defer="defer" type="application/javascript" src="https://github.githubassets.com/assets/app_assets_modules_github_blob-anchor_ts-app_assets_modules_github_hydro-analytics_ts-app_ass-7216b6-7165e8a965f9.js"></script>
 <script crossorigin="anonymous" defer="defer" type="application/javascript" src="https://github.githubassets.com/assets/app_assets_modules_github_behaviors_commenting_edit_ts-app_assets_modules_github_behaviors_ht-83c235-02b38260d85d.js"></script>
 <script crossorigin="anonymous" defer="defer" type="application/javascript" src="https://github.githubassets.com/assets/app_assets_modules_github_behaviors_batch-deferred-content_ts-app_assets_modules_github_failb-23a201-0930de42eef2.js"></script>
-<script crossorigin="anonymous" defer="defer" type="application/javascript" src="https://github.githubassets.com/assets/behaviors-82b0ef92cc67.js"></script>
+<script crossorigin="anonymous" defer="defer" type="application/javascript" src="https://github.githubassets.com/assets/behaviors-647965f47d9e.js"></script>
 <script crossorigin="anonymous" defer="defer" type="application/javascript" src="https://github.githubassets.com/assets/vendors-node_modules_delegated-events_dist_index_js-node_modules_github_catalyst_lib_index_js-06ff532-0eddb8f4d122.js"></script>
 <script crossorigin="anonymous" defer="defer" type="application/javascript" src="https://github.githubassets.com/assets/notifications-global-f030ce14eb3f.js"></script>
   
@@ -67,7 +67,7 @@
 
     
 
-  <meta name="request-id" content="F63D:5042:B46DF:10B0AC:63756208" data-pjax-transient="true"><meta name="html-safe-nonce" content="05980714daabd655c722e878031d64eddff15e54d72e1721913568499789e442" data-pjax-transient="true"><meta name="visitor-payload" content="eyJyZWZlcnJlciI6IiIsInJlcXVlc3RfaWQiOiJGNjNEOjUwNDI6QjQ2REY6MTBCMEFDOjYzNzU2MjA4IiwidmlzaXRvcl9pZCI6IjY5MjgzMTI2MTg0NDgxNTEwNTIiLCJyZWdpb25fZWRnZSI6ImlhZCIsInJlZ2lvbl9yZW5kZXIiOiJpYWQifQ==" data-pjax-transient="true"><meta name="visitor-hmac" content="a3009cee43adc698fb28e8fd2807df3c6fd15de4f879cc838a384f48f886e979" data-pjax-transient="true">
+  <meta name="request-id" content="FEA1:6825:DDE113:149A88E:6376133F" data-pjax-transient="true"><meta name="html-safe-nonce" content="e6220520aba98a2a6ba9d0a37ea5a89cff4da8dac892c7b74b43040703113fc2" data-pjax-transient="true"><meta name="visitor-payload" content="eyJyZWZlcnJlciI6IiIsInJlcXVlc3RfaWQiOiJGRUExOjY4MjU6RERFMTEzOjE0OUE4OEU6NjM3NjEzM0YiLCJ2aXNpdG9yX2lkIjoiMzU0MTY3NjEzMzk2NzUxMTY3IiwicmVnaW9uX2VkZ2UiOiJpYWQiLCJyZWdpb25fcmVuZGVyIjoiaWFkIn0=" data-pjax-transient="true"><meta name="visitor-hmac" content="1a6803aacf3345cb1d0a10160b252ce094c48b129d90f9030bc357c12d742c6c" data-pjax-transient="true">
 
 
 
@@ -143,10 +143,10 @@
     <meta name="enabled-features" content="IMAGE_METRIC_TRACKING,GEOJSON_AZURE_MAPS,STRICT_DEFERRED_DIFF_LINES_CHECKS">
 
 
-  <meta http-equiv="x-pjax-version" content="266aca01b615cafa070841648e910cfe98d9f9ec8eb2ceee8f40dc6f86725f18" data-turbo-track="reload">
+  <meta http-equiv="x-pjax-version" content="4bb3b257e6dda8153d5611c3cca9ea13b52bbe5a955621703c40a683eef19330" data-turbo-track="reload">
   <meta http-equiv="x-pjax-csp-version" content="40aca5a152a13213a876f7628c466cd600db12fb858cdddccc3f1cc387eb7dad" data-turbo-track="reload">
   <meta http-equiv="x-pjax-css-version" content="01adee91f49c47a797ec35a10ea885a7e9e61ca1d57558d767bb566d22862465" data-turbo-track="reload">
-  <meta http-equiv="x-pjax-js-version" content="59001717193b0c1eb7713991442bb78bd89e28b7f4f54e75867dd167a153b860" data-turbo-track="reload">
+  <meta http-equiv="x-pjax-js-version" content="73eae32eb6cd5daf143fa31fc36ab0ed1949590e4892f5dd7a7c6b03175cb012" data-turbo-track="reload">
 
   <meta name="turbo-cache-control" content="no-preview" data-turbo-transient="">
 
@@ -550,7 +550,7 @@
     <!-- '"` --><!-- </textarea></xmp> --><form class="js-site-search-form" role="search" aria-label="Site" data-unscoped-search-url="/search" data-turbo="false" action="/search" accept-charset="UTF-8" method="get">
       <label class="form-control header-search-wrapper input-sm p-0 js-chromeless-input-container header-search-wrapper-jump-to position-relative d-flex flex-justify-between flex-items-center">
         <input type="text" class="form-control js-site-search-focus header-search-input jump-to-field js-jump-to-field" data-hotkey="s,/" name="q" data-test-selector="nav-search-input" placeholder="Search GitHub" data-unscoped-placeholder="Search GitHub" data-scoped-placeholder="Search" autocapitalize="off" role="combobox" aria-haspopup="listbox" aria-expanded="false" aria-autocomplete="list" aria-controls="jump-to-results" aria-label="Search GitHub" data-jump-to-suggestions-path="/_graphql/GetSuggestedNavigationDestinations" spellcheck="false" autocomplete="off">
-        <input type="hidden" data-csrf="true" class="js-data-jump-to-suggestions-path-csrf" value="ACBQ8JQ4c1Ij3zhDNMEN0Hbn3Lxsaw75gaWs2m2sOMIBObJqtcUxvO+iIiUzNb+TIU6xXxIo+KxdNOuWtPKcFQ==">
+        <input type="hidden" data-csrf="true" class="js-data-jump-to-suggestions-path-csrf" value="ZRQIYZwr1r6kdKf2J67vsld2WL2jHxUUdygZnB9TzEGj8NbmwYqrIThmtAwbWYCIFs1/087RmXLGiHBOmXAn9g==">
         <input type="hidden" class="js-site-search-type-field" name="type">
             <svg xmlns="http://www.w3.org/2000/svg" width="22" height="20" aria-hidden="true" class="mr-1 header-search-key-slash"><path fill="none" stroke="#979A9C" opacity=".4" d="M3.5.5h12c1.7 0 3 1.3 3 3v13c0 1.7-1.3 3-3 3h-12c-1.7 0-3-1.3-3-3v-13c0-1.7 1.3-3 3-3z"></path><path fill="#979A9C" d="M11.8 6L8 15.1h-.9L10.8 6h1z"></path></svg>
 
@@ -830,12 +830,12 @@
 </div>
 
 
-    <a href="/topics/babel" class="no-underline d-flex flex-column flex-justify-center" data-ga-click="Explore, go to topic, text:babel; location:boxes">
-        <img src="https://raw.githubusercontent.com/github/explore/cb39e2385dfcec8a661d01bfacff6b1e33bbaa9d/topics/babel/babel.png" width="64" height="64" class="mx-auto rounded mb-3" alt="babel">
+    <a href="/topics/vagrant" class="no-underline d-flex flex-column flex-justify-center" data-ga-click="Explore, go to topic, text:vagrant; location:boxes">
+        <img src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/vagrant/vagrant.png" width="64" height="64" class="mx-auto rounded mb-3" alt="vagrant">
       <p class="f3 lh-condensed text-center Link--primary mb-0 mt-1">
-        Babel
+        Vagrant
       </p>
-      <p class="f5 color-fg-muted text-center mb-0 mt-1">Babel is a compiler for writing next generation JavaScript, today.</p>
+      <p class="f5 color-fg-muted text-center mb-0 mt-1">Vagrant is an open-source software product for building and maintaining portable virtual software development environments.</p>
     </a>
   </div>
 </li>
@@ -846,12 +846,12 @@
 </div>
 
 
-    <a href="/topics/mastodon" class="no-underline d-flex flex-column flex-justify-center" data-ga-click="Explore, go to topic, text:mastodon; location:boxes">
-        <img src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/mastodon/mastodon.png" width="64" height="64" class="mx-auto rounded mb-3" alt="mastodon">
+    <a href="/topics/html" class="no-underline d-flex flex-column flex-justify-center" data-ga-click="Explore, go to topic, text:html; location:boxes">
+        <img src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/html/html.png" width="64" height="64" class="mx-auto rounded mb-3" alt="html">
       <p class="f3 lh-condensed text-center Link--primary mb-0 mt-1">
-        Mastodon
+        HTML
       </p>
-      <p class="f5 color-fg-muted text-center mb-0 mt-1">Mastodon is a free, decentralized, open source microblogging network.</p>
+      <p class="f5 color-fg-muted text-center mb-0 mt-1">HTML is the fundamental markup language for webpages.</p>
     </a>
   </div>
 </li>
@@ -862,12 +862,12 @@
 </div>
 
 
-    <a href="/topics/database" class="no-underline d-flex flex-column flex-justify-center" data-ga-click="Explore, go to topic, text:database; location:boxes">
-        <img src="https://raw.githubusercontent.com/github/explore/13295c57999765ac9ffa3281942a72ab08b79de2/topics/database/database.png" width="64" height="64" class="mx-auto rounded mb-3" alt="database">
+    <a href="/topics/electron" class="no-underline d-flex flex-column flex-justify-center" data-ga-click="Explore, go to topic, text:electron; location:boxes">
+        <img src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/electron/electron.png" width="64" height="64" class="mx-auto rounded mb-3" alt="electron">
       <p class="f3 lh-condensed text-center Link--primary mb-0 mt-1">
-        Database
+        Electron
       </p>
-      <p class="f5 color-fg-muted text-center mb-0 mt-1">A database is a structured set of data held in a computer, usually a server.</p>
+      <p class="f5 color-fg-muted text-center mb-0 mt-1">Electron is a framework for building cross-platform desktop applications with web technology.</p>
     </a>
   </div>
 </li>
@@ -4617,18 +4617,18 @@
 </a>
           </li>
           <li class="d-inline-block">
-            <a data-ga-click="Topics, go to arduino, location:popular topics" href="/topics/arduino" title="Topic: arduino" data-view-component="true" class="topic-tag topic-tag-link f6 my-1">
-  arduino
+            <a data-ga-click="Topics, go to scala, location:popular topics" href="/topics/scala" title="Topic: scala" data-view-component="true" class="topic-tag topic-tag-link f6 my-1">
+  scala
 </a>
           </li>
           <li class="d-inline-block">
-            <a data-ga-click="Topics, go to esp32, location:popular topics" href="/topics/esp32" title="Topic: esp32" data-view-component="true" class="topic-tag topic-tag-link f6 my-1">
-  esp32
+            <a data-ga-click="Topics, go to js, location:popular topics" href="/topics/js" title="Topic: js" data-view-component="true" class="topic-tag topic-tag-link f6 my-1">
+  js
 </a>
           </li>
           <li class="d-inline-block">
-            <a data-ga-click="Topics, go to synthesizer, location:popular topics" href="/topics/synthesizer" title="Topic: synthesizer" data-view-component="true" class="topic-tag topic-tag-link f6 my-1">
-  synthesizer
+            <a data-ga-click="Topics, go to unmaintained, location:popular topics" href="/topics/unmaintained" title="Topic: unmaintained" data-view-component="true" class="topic-tag topic-tag-link f6 my-1">
+  unmaintained
 </a>
           </li>
           <li class="d-inline-block">
